k8s/apps/home-assistant/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
